--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,8 +7,23 @@ on:
     branches: [master]
 
 jobs:
-  build_and_test:
+  build:
     runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install project
+        run: npm install
+      - name: Build the project
+        run: npm run build --if-present
+  test:
+    runs-on: ubuntu-latest
+    needs: build
 
     strategy:
       matrix:
@@ -17,13 +32,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install project
-        run: npm install
-      - name: Build the project
-        run: npm run build --if-present
       - name: Run tests
-        run: npm test
+      run: npm test
