--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,8 +7,12 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node: [10, 12, 14]
 
     steps:
       - name: Checkout
@@ -21,16 +25,5 @@ jobs:
         run: npm install
       - name: Build the project
         run: npm run build --if-present
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    strategy:
-      matrix:
-        node: [10, 12, 14]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Run tests
-      run: npm test
+        run: npm test
