--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [14.8.1, 16.5.0, 16.14.2]
+        node: [14, 16]
 
     steps:
       - name: Checkout
