--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     ]
   },
   "engines": {
-    "node": "^12 || ^14 || ^16",
-    "npm": "^6 || ^7 || ^8"
+    "node": "^12.22.0 || ^14.17.0 || >=16.5.0",
+    "npm": "^6 || ^7"
   }
 }
