--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.1.1",
     "@testing-library/user-event": "13.5.0",
+    "cypress": "^8.7.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-scripts": "5.0.1",
@@ -36,7 +37,7 @@
     ]
   },
   "engines": {
-    "node": "^12.22.0 || ^14.17.0 || >=16.5.0",
-    "npm": "^6 || ^7"
+    "node": ">=14.18.0",
+    "npm": "^6 || ^7 || ^8"
   }
 }
